Deploy BrowserAgent & EmailAgent integration
- Add BrowserAgent with Playwright automation and GPT-4o decision making
- Add EmailAgent for task result notification with PDF attachments
- Update Task model with downloaded_files field
- Integrate email sending into websocket_server deep_search workflow
- Add comprehensive deployment scripts and documentation
- Add migration script for database schema changes
- Add deployment check script for server readiness
- Update requirements.txt with all dependencies

Deployment ready for verifaible.space

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,14 @@ scikit-learn==1.3.2
 # WSGI Server (Production)
 gunicorn==21.2.0
 
-# Database Drivers (Optional - uncomment as needed)
-# psycopg2-binary==2.9.9  # PostgreSQL
-# PyMySQL==1.1.0          # MySQL
+# Browser Automation & Web Scraping
+playwright==1.41.0
+beautifulsoup4==4.12.3
+lxml==5.1.0
+
+# OpenAI (for GPT-5-mini vision)
+openai==1.10.0
+
+# Database Drivers
+psycopg2-binary==2.9.9  # PostgreSQL
+PyMuPDF
